[T] TestFx support for selenium like unit testing
https://github.com/TestFX/TestFX