@@ -71,6 +71,12 @@
       <version>5.4.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-junit5</artifactId>
+      <version>4.0.15-alpha</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -122,9 +128,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.0.0-M3</version>
         <configuration>
-          <argLine>--add-opens ntag/ntag.io.util=ALL-UNNAMED</argLine>
+          <groups>Unit</groups>
+          <!-- fix for running unit tests with java 11 -->
+          <!-- accessible: module ntag does not "opens ntag.x.y" to unnamed module @bae7dc0 -->
+          <forkCount>0</forkCount>
         </configuration>
       </plugin>
     </plugins>
@@ -241,6 +250,24 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>selenium</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M3</version>
+            <configuration>
+              <groups>Selenium</groups>
+              <!-- fix for running unit tests with java 11 -->
+              <!-- accessible: module ntag does not "opens ntag.x.y" to unnamed module @bae7dc0 -->
+              <forkCount>0</forkCount>
+            </configuration>
           </plugin>
         </plugins>
       </build>
